maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: value update is not a member of plm.universe.Direction
  case 0 =>{while ((!isFacingWall())&&(getDirection()=Direction.NORTH)) {forward()}}; // North runner
                                       ^